sidebar z-index bug fixed

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -14,6 +14,7 @@ body {
   overflow: hidden;
   left: -100%;
   position: relative;
+  z-index: 999;
 
   .responsive-sidebar-close-button {
     display: none;
